--- a/example/Sample/Sample.csproj
+++ b/example/Sample/Sample.csproj
@@ -8,6 +8,6 @@
         <PackageReference Include="ReactiveUI" Version="14.*" />
     </ItemGroup>
     <ItemGroup>
-        <ProjectReference Include="..\..\src\ReactiveUI.Analyzers\ReactiveUI.Analyzers.csproj" PrivateAssets="all" ReferenceOutputAssembly="false" OutputItemType="Analyzer" />
+        <ProjectReference Include="..\..\src\ReactiveUI.Analysis.Roslyn\ReactiveUI.Analysis.Roslyn.csproj" PrivateAssets="all" ReferenceOutputAssembly="false" OutputItemType="Analyzer" />
     </ItemGroup>
 </Project>
