--- a/.build/.build.csproj
+++ b/.build/.build.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
+    <RootNamespace />
     <NoWarn>CS0649;CS0169</NoWarn>
     <IsPackable>False</IsPackable>
     <NukeTelemetryVersion>1</NukeTelemetryVersion>
