--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           clean: 'false'
+      - name: 🔨 Use .NET Core 6.0 SDK
+        uses: actions/setup-dotnet@v1.8.2
+        with:
+          dotnet-version: '6.0.x'
+          include-prerelease: true
       - name: 🎁 dotnet tool restore
         run: |
           dotnet tool restore
