--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,14 @@ jobs:
         uses: actions/checkout@v2
         with:
           clean: 'false'
+      - name: 🔨 Use .NET Core 3.1 SDK
+        uses: actions/setup-dotnet@v1.8.2
+        with:
+          dotnet-version: '3.1.x'
+      - name: 🔨 Use .NET Core 5.0 SDK
+        uses: actions/setup-dotnet@v1.8.2
+        with:
+          dotnet-version: '5.0.x'
       - name: 🔨 Use .NET Core 6.0 SDK
         uses: actions/setup-dotnet@v1.8.2
         with:
