--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,22 +64,7 @@ jobs:
           dotnet nuke Build --skip
       - name: 🚦 Test
         run: |
-          dotnet nuke Test --skip
-      - name: Trigger Code Coverage Reports
-        run: |
-          dotnet nuke Trigger_Code_Coverage_Reports --skip
-      - name: Generate Code Coverage Report Cobertura
-        run: |
-          dotnet nuke Generate_Code_Coverage_Report_Cobertura --skip
-      - name: Generate Code Coverage Badges
-        run: |
-          dotnet nuke Generate_Code_Coverage_Badges --skip
-      - name: Generate Code Coverage Summary
-        run: |
-          dotnet nuke Generate_Code_Coverage_Summary --skip
-      - name: Generate Code Coverage Report
-        run: |
-          dotnet nuke Generate_Code_Coverage_Report --skip
+          dotnet nuke Test Trigger_Code_Coverage_Reports Generate_Code_Coverage_Report_Cobertura Generate_Code_Coverage_Badges Generate_Code_Coverage_Summary Generate_Code_Coverage_Report --skip
       - name: 📦 Pack
         run: |
           dotnet nuke Pack --skip
