--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,9 +37,13 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2.3.4
         with:
           clean: 'false'
+          fetch-depth: '0'
+      - name: Fetch all history for all tags and branches
+        run: |
+          git fetch --prune
       - name: 🔨 Use .NET Core 3.1 SDK
         uses: actions/setup-dotnet@v1.8.2
         with:
