--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,3 +72,32 @@ jobs:
       - name: 📦 Pack
         run: |
           dotnet nuke Pack --skip
+      # - name: 🐿 Publish Coverage
+      #   uses: codecov/codecov-action@v1.1.0
+      #   with:
+      #     name: 'actions-${{ matrix.os }}'
+      #     fail_ci_if_error: 'true'
+      - name: 🏺 Publish logs
+        if: always()
+        uses: actions/upload-artifact@v2.2.1
+        with:
+          name: 'logs'
+          path: 'artifacts/logs/'
+      - name: 🏺 Publish coverage data
+        if: always()
+        uses: actions/upload-artifact@v2.2.1
+        with:
+          name: 'coverage'
+          path: 'coverage/'
+      - name: 🏺 Publish test data
+        if: always()
+        uses: actions/upload-artifact@v2.2.1
+        with:
+          name: 'test data'
+          path: 'artifacts/test/'
+      - name: 🏺 Publish NuGet Packages
+        if: always()
+        uses: actions/upload-artifact@v2.2.1
+        with:
+          name: 'nuget'
+          path: 'artifacts/nuget/'
