add coverage publish

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,11 +72,11 @@ jobs:
       - name: 📦 Pack
         run: |
           dotnet nuke Pack --skip
-      # - name: 🐿 Publish Coverage
-      #   uses: codecov/codecov-action@v1.1.0
-      #   with:
-      #     name: 'actions-${{ matrix.os }}'
-      #     fail_ci_if_error: 'true'
+      - name: 🐿 Publish Coverage
+        uses: codecov/codecov-action@v1.1.0
+        with:
+          name: 'actions-${{ matrix.os }}'
+          fail_ci_if_error: 'true'
       - name: 🏺 Publish logs
         if: always()
         uses: actions/upload-artifact@v2.2.1
