--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,7 +1,7 @@
 pull_request_rules:
   - name: automatic merge when GitHub branch protection passes (others)
     conditions:
-      - base=master
+      - base=main
       - -author~=^dependabot(|-preview)\[bot\]$
       - 'label=:shipit: merge'
     actions:
