--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -33,27 +33,7 @@ jobs:
         # continue-on-error: true
         if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main') && startsWith(github.event.workflow_run.head_branch, 'v') # this is the best approximation for a tag
         env:
-          ApiKey: ${{ secrets.RSG_NUGET_API_KEY }}
+          ApiKey: ${{ secrets.NUGET_API_KEY }}
         shell: pwsh
         run: |
           dotnet nuget push **/*.nupkg  --skip-duplicate -s nuget.org --api-key $ENV:ApiKey
-
-      - name: dev.azure.com
-        # continue-on-error: true
-        if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
-        env:
-          ApiKey: ${{ secrets.RSG_AZURE_DEVOPS }}
-        shell: pwsh
-        run: |
-          dotnet nuget add source https://rocketsurgeonsguild.pkgs.visualstudio.com/Libraries/_packaging/Packages/nuget/v3/index.json --store-password-in-clear-text --name LibrariesPackages --username azuredevops --password $ENV:ApiKey
-          dotnet nuget push **/*.nupkg --skip-duplicate --api-key azuredevops --source LibrariesPackages
-
-      - name: preview.dev.azure.com
-        # continue-on-error: true
-        if: github.ref != 'refs/heads/master' && github.ref != 'refs/heads/main'
-        env:
-          ApiKey: ${{ secrets.RSG_AZURE_DEVOPS }}
-        shell: pwsh
-        run: |
-          dotnet nuget add source https://rocketsurgeonsguild.pkgs.visualstudio.com/Libraries/_packaging/Preview/nuget/v3/index.json --store-password-in-clear-text --name LibrariesPreview --username azuredevops --password $ENV:ApiKey
-          dotnet nuget push **/*.nupkg --skip-duplicate --api-key azuredevops --source LibrariesPreview
