--- a/test/RxUI.Analysis.Roslyn.Tests/RxUI.Analysis.Roslyn.Tests.csproj
+++ b/test/RxUI.Analysis.Roslyn.Tests/RxUI.Analysis.Roslyn.Tests.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.0.0-2.21354.7" PrivateAssets="all" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
         <PackageReference Include="System.Reactive" Version="5.*" />
         <PackageReference Include="ReactiveUI" Version="14.*" />
