--- a/src/RxUI.Analysis.Roslyn/RxUI.Analysis.Roslyn.csproj
+++ b/src/RxUI.Analysis.Roslyn/RxUI.Analysis.Roslyn.csproj
@@ -1,6 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <Company>Rocket Surgeons Guild</Company>
+        <Copyright>Copyright Rodney Littles, II © $([System.DateTime]::Now.ToString('yyyy'))</Copyright>
+        <Authors>Rodney Littles, II</Authors>
+        <RootNamespace>ReactiveUI.Analysis.Roslyn</RootNamespace>
+        <PackageProjectUrl>https://github.com/RLittlesII/ReactiveUI.Roslyn</PackageProjectUrl>
+        <PackageLicenseFile>LICENSE</PackageLicenseFile>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
         <TargetFramework>netstandard2.0</TargetFramework>
         <LangVersion>latest</LangVersion>
     </PropertyGroup>
