--- a/src/RxUI.Analysis.Roslyn/RxUI.Analysis.Roslyn.csproj
+++ b/src/RxUI.Analysis.Roslyn/RxUI.Analysis.Roslyn.csproj
@@ -1,6 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <Company>Rocket Surgeons Guild</Company>
         <Copyright>Copyright Rodney Littles, II © $([System.DateTime]::Now.ToString('yyyy'))</Copyright>
         <Authors>Rodney Littles, II</Authors>
         <RootNamespace>ReactiveUI.Analysis.Roslyn</RootNamespace>
@@ -13,6 +12,7 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.0.0-2.21354.7" PrivateAssets="all" />
+        <PackageReference Include="Rocket.Surgery.MSBuild.GitVersion" IncludeAssets="analyzers;build;buildMultitargeting;buildTransitive" PrivateAssets="All" />
     </ItemGroup>
     <ItemGroup>
         <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
