--- a/.github/workflows/publish-nuget.yml
+++ b/.github/workflows/publish-nuget.yml
@@ -24,7 +24,7 @@ jobs:
         uses: dawidd6/action-download-artifact@v2
         if: github.event.workflow_run.conclusion == 'success'
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
           workflow: ci.yml
           run_id: ${{ github.event.id }}
           name: nuget
