--- a/.github/workflows/close-milestone.yml
+++ b/.github/workflows/close-milestone.yml
@@ -1,43 +1,50 @@
 name: Close Milestone
+
 on:
+  workflow_call:
+    # inputs:
+    secrets:
+      RSG_BOT_TOKEN:
+        required: true
   release:
     types:
       - released
+
 jobs:
   close_milestone:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2.3.4
+        uses: actions/checkout@v2.4.0
         with:
           fetch-depth: 0
 
       - name: Install GitVersion
-        uses: gittools/actions/gitversion/setup@v0.9.8
+        uses: gittools/actions/gitversion/setup@v0.9.11
         with:
           versionSpec: '5.x'
 
       - name: Install GitReleaseManager
-        uses: gittools/actions/gitreleasemanager/setup@v0.9.8
+        uses: gittools/actions/gitreleasemanager/setup@v0.9.11
         with:
           versionSpec: '0.11.x'
 
       - name: Use GitVersion
         id: gitversion
-        uses: gittools/actions/gitversion/execute@v0.9.8
+        uses: gittools/actions/gitversion/execute@v0.9.11
 
       # Ensure the milestone exists
       - name: Create Milestone
-        uses: WyriHaximus/github-action-create-milestone@0.1.0
+        uses: WyriHaximus/github-action-create-milestone@v1
         with:
           title: v${{ steps.gitversion.outputs.majorMinorPatch }}
         env:
-          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
+          GITHUB_TOKEN: '${{ github.token }}'
         continue-on-error: true
 
       # move any issues to that milestone in the event the release is renamed
       - name: sync milestones
-        uses: RocketSurgeonsGuild/actions/sync-milestone@v0.2.4
+        uses: RocketSurgeonsGuild/actions/sync-milestone@v0.2.6
         with:
           default-label: ':sparkles: mysterious'
           github-token: ${{ secrets.RSG_BOT_TOKEN }}
@@ -58,5 +65,5 @@ jobs:
           dotnet gitreleasemanager close `
             -o "${{ steps.repository.outputs.owner }}" `
             -r "${{ steps.repository.outputs.repository }}" `
-            --token "${{ secrets.GITHUB_TOKEN }}" `
+            --token "${{ github.token }}" `
             -m "v${{ steps.gitversion.outputs.majorMinorPatch }}"
