--- a/.github/workflows/dependabot-merge.yml
+++ b/.github/workflows/dependabot-merge.yml
@@ -70,7 +70,7 @@ jobs:
             )
         uses: peaceiris/actions-label-commenter@v1.10.0
         with:
-          github-token: ${{ secrets.GITHUB_TOKKEN }}
+          github-token: ${{ github.token }}
           config_file: .github/label-commenter-dependabot.yml
 
       - name: GitHub Automerge
