--- a/.github/workflows/dependabot-merge.yml
+++ b/.github/workflows/dependabot-merge.yml
@@ -70,7 +70,7 @@ jobs:
             )
         uses: peaceiris/actions-label-commenter@v1.10.0
         with:
-          github_token: ${{ secrets.RSG_BOT_TOKEN }}
+          github-token: ${{ github.token }}
           config_file: .github/label-commenter-dependabot.yml
 
       - name: GitHub Automerge
@@ -82,7 +82,7 @@ jobs:
           )
         uses: alexwilson/enable-github-automerge-action@1.0.0
         with:
-          github-token: "${{ secrets.GITHUB_TOKEN }}"
+          github-token: "${{ github.token }}"
           merge-method: "SQUASH"
 
       - name: GitHub Remove Labels
