--- a/.github/workflows/update-milestone.yml
+++ b/.github/workflows/update-milestone.yml
@@ -1,6 +1,8 @@
 name: Update Milestone
+
 on:
-  pull_request:
+  workflow_call:
+  pull_request_target:
     types:
       - closed
       - opened
@@ -13,9 +15,41 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.4
+        with:
+          ref: ${{ github.head_ref }}
+          fetch-depth: 0
+
+      - name: Fetch all history for all tags and branches
+        run: git fetch --prune
+
+      - name: Install GitVersion
+        if: ${{ github.event.action == 'opened' }}
+        uses: gittools/actions/gitversion/setup@v0.9.9
+        with:
+          versionSpec: '5.x'
+
+      - name: Install GitReleaseManager
+        if: ${{ github.event.action == 'opened' }}
+        uses: gittools/actions/gitreleasemanager/setup@v0.9.9
+        with:
+          versionSpec: '0.11.x'
+
+      - name: Use GitVersion
+        if: ${{ github.event.action == 'opened' }}
+        id: gitversion
+        uses: gittools/actions/gitversion/execute@v0.9.9
+
+      - name: Create Milestone
+        if: ${{ github.event.action == 'opened' }}
+        uses: WyriHaximus/github-action-create-milestone@v1
+        with:
+          title: v${{ steps.gitversion.outputs.majorMinorPatch }}
+        env:
+          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
+        continue-on-error: true
 
       - name: sync milestones
-        uses: RocketSurgeonsGuild/actions/sync-milestone@v0.2.4
+        uses: RocketSurgeonsGuild/actions/sync-milestone@v0.2.6
         with:
           default-label: ':sparkles: mysterious'
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ github.token }}
