--- a/src/RxUI.Analysis.Roslyn/RxUI.Analysis.Roslyn.csproj
+++ b/src/RxUI.Analysis.Roslyn/RxUI.Analysis.Roslyn.csproj
@@ -7,7 +7,7 @@
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PublishRepositoryUrl>true</PublishRepositoryUrl>
         <TargetFramework>netstandard2.0</TargetFramework>
-        <LangVersion>latest</LangVersion>
+        <LangVersion>preview</LangVersion>
         <NoPackageAnalysis>true</NoPackageAnalysis>
     </PropertyGroup>
     <ItemGroup>
