--- a/test/RxUI.Analysis.Roslyn.Tests/RxUI.Analysis.Roslyn.Tests.csproj
+++ b/test/RxUI.Analysis.Roslyn.Tests/RxUI.Analysis.Roslyn.Tests.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <IsPackable>false</IsPackable>
-        <LangVersion>latest</LangVersion>
+        <LangVersion>preview</LangVersion>
         <RootNamespace>ReactiveUI.Analysis.Roslyn.Tests</RootNamespace>
     </PropertyGroup>
 
